; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/sep/extr_sep_driver.c_sep_deallocated_flow_tables.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/sep/extr_sep_driver.c_sep_deallocated_flow_tables.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sep_lli_entry_t = type { i64, i64 }
%struct.page = type { i32 }

@SEP_NUM_ENTRIES_OFFSET_IN_BITS = common dso_local global i64 0, align 8
@SEP_NUM_ENTRIES_MASK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sep_lli_entry_t*)* @sep_deallocated_flow_tables to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sep_deallocated_flow_tables(%struct.sep_lli_entry_t* %0) #0 {
  %2 = alloca %struct.sep_lli_entry_t*, align 8
  %3 = alloca i64*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.page**, align 8
  %7 = alloca %struct.sep_lli_entry_t*, align 8
  store %struct.sep_lli_entry_t* %0, %struct.sep_lli_entry_t** %2, align 8
  %8 = load %struct.sep_lli_entry_t*, %struct.sep_lli_entry_t** %2, align 8
  %9 = getelementptr inbounds %struct.sep_lli_entry_t, %struct.sep_lli_entry_t* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to i64*
  store i64* %11, i64** %3, align 8
  %12 = load %struct.sep_lli_entry_t*, %struct.sep_lli_entry_t** %2, align 8
  %13 = getelementptr inbounds %struct.sep_lli_entry_t, %struct.sep_lli_entry_t* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @SEP_NUM_ENTRIES_OFFSET_IN_BITS, align 8
  %16 = lshr i64 %14, %15
  %17 = load i64, i64* @SEP_NUM_ENTRIES_MASK, align 8
  %18 = and i64 %16, %17
  store i64 %18, i64* %4, align 8
  br label %19

19:                                               ; preds = %23, %1
  %20 = load i64*, i64** %3, align 8
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 4294967295
  br i1 %22, label %23, label %50

23:                                               ; preds = %19
  %24 = load i64*, i64** %3, align 8
  %25 = getelementptr inbounds i64, i64* %24, i64 -2
  %26 = load i64, i64* %25, align 8
  store i64 %26, i64* %5, align 8
  %27 = load i64*, i64** %3, align 8
  %28 = getelementptr inbounds i64, i64* %27, i64 -1
  %29 = load i64, i64* %28, align 8
  %30 = inttoptr i64 %29 to %struct.page**
  store %struct.page** %30, %struct.page*** %6, align 8
  %31 = load %struct.page**, %struct.page*** %6, align 8
  %32 = load i64, i64* %5, align 8
  %33 = call i32 @sep_free_dma_pages(%struct.page** %31, i64 %32, i32 1)
  %34 = load i64*, i64** %3, align 8
  %35 = bitcast i64* %34 to %struct.sep_lli_entry_t*
  %36 = load i64, i64* %4, align 8
  %37 = sub i64 %36, 1
  %38 = getelementptr inbounds %struct.sep_lli_entry_t, %struct.sep_lli_entry_t* %35, i64 %37
  store %struct.sep_lli_entry_t* %38, %struct.sep_lli_entry_t** %7, align 8
  %39 = load %struct.sep_lli_entry_t*, %struct.sep_lli_entry_t** %7, align 8
  %40 = getelementptr inbounds %struct.sep_lli_entry_t, %struct.sep_lli_entry_t* %39, i32 0, i32 1
  %41 = load i64, i64* %40, align 8
  %42 = inttoptr i64 %41 to i64*
  store i64* %42, i64** %3, align 8
  %43 = load %struct.sep_lli_entry_t*, %struct.sep_lli_entry_t** %7, align 8
  %44 = getelementptr inbounds %struct.sep_lli_entry_t, %struct.sep_lli_entry_t* %43, i32 0, i32 0
  %45 = load i64, i64* %44, align 8
  %46 = load i64, i64* @SEP_NUM_ENTRIES_OFFSET_IN_BITS, align 8
  %47 = lshr i64 %45, %46
  %48 = load i64, i64* @SEP_NUM_ENTRIES_MASK, align 8
  %49 = and i64 %47, %48
  store i64 %49, i64* %4, align 8
  br label %19

50:                                               ; preds = %19
  ret void
}

declare dso_local i32 @sep_free_dma_pages(%struct.page**, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
